# moneyflow

./: Cargo.toml  Dockerfile  LICENSE  README.md
.sqlx/: query-45442094cdff368c462dadb52c7a85134e56f8f87bf4372243508dd9d873eb45.json  query-66966c6c51163aa433951dc3d811a3239d2d39a2ca646a541f86ffee08399e6a.json  query-67f26f169653a462c7c424287146c32c6be63d7345bdd5555470c5a04033819a.json  query-95e81e807cc56b67e68c2383fb07e6177aeffa92beec7f1347e6a7a4b57d4a91.json  query-d3ebcf603400f4bd4bb401d5ddad4e80a66099be90f6deacc04d70f8450481ef.json
migrations/: 20250112145305_create_user_table.sql  20250112150213_create_categories_table.sql  20250112150622_create_transactions_table.sql
src/: main.rs  utils.rs
src/controllers/: auth.rs  categories.rs  me.rs  mod.rs  transactions.rs
src/db/: categories.rs  mod.rs  transactions.rs  user.rs
src/middleware/: auth.rs  mod.rs
