[package]
name = "moneyflow"
version = "0.1.0"
edition = "2021"
authors = ["Afaan Bilal <https://afaan.dev>"]
license = "MIT"

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
actix-web = "4"
bcrypt = "0.16.0"
chrono = { version = "0.4.39", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "mysql",
    "chrono",
] }
tokio = { version = "1.43.0", features = ["full"] }
